Revision history for XML-Grammar-Fiction.

v0.14.3     2013-04-30
    * Convert 'Changes' (this file) to CPAN::Changes.
        - Add a test in dist.ini.

v0.14.2      2013-04-30
    * Tweak dist.in to have proper runtime dependencies.
        - Thanks to leont on irc.perl.org .
    * Remove the Makefile.PL from the target distribution.
        - it did not handle dependencies well.
        - thanks to ether and kentnl on irc.perl.org .

v0.14.1      2013-04-29
    * Moved unused to rejects:
        - lib/XML/Grammar/Fiction/RNG_Renderer.pm
        - lib/XML/Grammar/Screenplay/XSLT/Base.pm
    * Made Test::XML::Ordered a test phase requires in dist.ini.
        - so it will be mentioned only once.

v0.14.0      2013-04-28
    * Update the glob in inc/Test/Run/Builder.pm .
        - include t/screenplay/*.t and t/fiction/*.t .
    * lib/XML/Grammar/FictionBase/XSLT/Converter.pm
        - Refactoring: _data_dir now initialized from default => sub { ... }.
        - Refactoring: _rng now initialized from default => sub { ... }.
    * Convert to XML::GrammarBase :
        - lib/XML/Grammar/Fiction/ToHTML.pm
        - lib/XML/Grammar/Fiction/ToDocBook.pm
        - lib/XML/Grammar/Screenplay/ToDocBook.pm
        - lib/XML/Grammar/Screenplay/ToHTML.pm
        - lib/XML/Grammar/Screenplay/ToTEI.pm
    * Add a missing Test::XML::Ordered minimal version of 0.0.5
        - Due to test failures.

v0.12.5      2013-04-27
    * Do not try to compile scripts/bump-version-number.pl .
        - Requires File::Find::Object which isn't a dependency.
    * New version of MooX::late to avoid test failures.
        - MooX::late = 0.010

v0.12.4      2013-04-22
    * Add $VERSION to more missing files.

v0.12.3      2013-04-22
    * Add $VERSION to missing files.

v0.12.2      2013-04-09
    * Made error handling more informative.

v0.12.1      2013-03-26
    * Add MooX::late to the dependencies to avoid test failures: